--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -19,23 +19,10 @@
 
     <style>
 
-        /* COMMIN 구간---------------------------------- */
-
-
-        /* COMMIN 구간---------------------------------- */
-
-<!--        보드 스타일 구간    -->
-
-
-        <!--        보드 스타일 구간    -->
-
-
-
-
-
-
-
-
+        .home{
+            font-weight: 800;
+            font-size : 1.2rem;
+        }
 
          /* 알림 패널 스타일 */
         .notification-panel {
@@ -121,7 +108,7 @@
 
 <!--    알림 ----------------------------------------------------------------->
 
-<!-- /* COMMIN 구간---------------------------------- */ -->
+<!-- /* COMMON 구간---------------------------------- */ -->
 
 <header>
     <div class="menu">
@@ -134,8 +121,9 @@
         <div class="middle-menu">
             <a href="/list">
                 <div class="home">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-                        <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16.8" height="16.8" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                        <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
+                        <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
                     </svg>홈
                 </div>
             </a>
@@ -196,18 +184,14 @@
     </div>
 </header>
 
+<!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+
+
 <div class="up">
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-square-fill" viewBox="0 0 16 16">
         <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm4 9h8a.5.5 0 0 0 .374-.832l-4-4.5a.5.5 0 0 0-.748 0l-4 4.5A.5.5 0 0 0 4 11z"/>
     </svg>
 </div>
-
-<!-- /* COMMIN 구간---------------------------------- */ -->
-
-<!-- ------------------------------------------------------------------------------------------------------------------------------ -->
-
-
-
 
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
             <div class="offcanvas-header">
@@ -233,6 +217,9 @@
 
             </div>
         </div>
+
+<!-- /* COMMON 구간---------------------------------- */ -->
+
 
 <main>
     <div class="board">
