--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -19,6 +19,15 @@
 
     <style>
 
+        .mypage{
+            font-weight: 800;
+
+        }
+
+        .mypage>img{
+            border : 2px solid gray;
+        }
+
         main>section{
             margin-top : 50px;
             margin-left : 16%;
@@ -199,7 +208,7 @@
             </a>
 
             <a href="/mypage">
-                <div class="mypage">
+                <div class="mypage" style="font-size : 1.2rem;">
                     <img th:src="${dto.profile}" style="width:22px;height:22px;border-radius:50%;" />프로필
                 </div>
             </a>
