--- a/src/main/resources/templates/search-contents.html
+++ b/src/main/resources/templates/search-contents.html
@@ -34,7 +34,7 @@
     <div class="menu">
 
         <div class="logo">
-            <a href="/list"> <img src="images/logo.png" max-width="100%" height="15"/> </a>
+            <a href="/list"> <img src="/images/logo.png" max-width="100%" height="15"/> </a>
             <!-- <h2><span th:text="${dto.nickname}"></span>닉네임</h2> -->
         </div>
 
