모든검색완료 이거언제끝나냐

--- a/src/main/resources/templates/search-nickname.html
+++ b/src/main/resources/templates/search-nickname.html
@@ -41,6 +41,7 @@
     padding : 20px;
     padding-left : 50px;
     padding-bottom : 50px;
+    margin-bottom : 50px;
 }
 .name{
     display: flex;
