--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,6 +49,10 @@
           left : 100px;
         }
 
+        .idpw{
+            padding-left : 5px;
+        }
+
         .idpw > input{
             margin-bottom : 10px;
             height : 40px;
