--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -114,41 +114,41 @@
 
 /* 모달 스타일 */
 
-.modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 1;
-    overflow: auto;
-}
+<!--.modal {-->
+<!--    display: none;-->
+<!--    position: fixed;-->
+<!--    top: 0;-->
+<!--    left: 0;-->
+<!--    width: 100%;-->
+<!--    height: 100%;-->
+<!--    background-color: rgba(0, 0, 0, 0.7);-->
+<!--    z-index: 1;-->
+<!--    overflow: auto;-->
+<!--}-->
 
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 50%;
-    max-width: 600px;
-    text-align: center;
-    position: relative;
-}
+<!--.modal-content {-->
+<!--    background-color: #fefefe;-->
+<!--    margin: 15% auto;-->
+<!--    padding: 20px;-->
+<!--    border: 1px solid #888;-->
+<!--    width: 50%;-->
+<!--    max-width: 600px;-->
+<!--    text-align: center;-->
+<!--    position: relative;-->
+<!--}-->
 
-.close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 10px;
-    cursor: pointer;
-}
+<!--.close {-->
+<!--    position: absolute;-->
+<!--    top: 0;-->
+<!--    right: 0;-->
+<!--    padding: 10px;-->
+<!--    cursor: pointer;-->
+<!--}-->
 
-/* 파일 업로드 폼 스타일 */
-#profileUploadForm {
-    margin-top: 20px;
-}
+<!--/* 파일 업로드 폼 스타일 */-->
+<!--#profileUploadForm {-->
+<!--    margin-top: 20px;-->
+<!--}-->
     </style>
 
 </head>
@@ -198,14 +198,12 @@
                 </div>
             </a>
 
-            <a href="/post">
-                <div class="write">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
-                        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                    </svg>글쓰기
-                </div>
-            </a>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>글쓰기
+            </button>
 
             <a href="/mypage">
                 <div class="mypage" style="font-size : 1.2rem;">
@@ -262,6 +260,48 @@
 
     </div>
 </div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">글쓰기</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body">
+
+                <form action="/post" method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label>작성자 </label>
+                        <span th:text="${dto.nickname}"></span><br/>
+
+                        <!-- <label for="email">글쓴이 이메일 </label>
+                        <input type="text" id="email" name="email" th:value="${#authentication.principal.username}" readonly /> -->
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" type="file" id="formFile" name="files" multiple>
+                        <div class="miri">
+                            미리보기
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="contents"></label>
+                        <textarea id="contents" name="contents" rows="4" required></textarea>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary submit-button">등록</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 <main>
     <section>
@@ -296,18 +336,18 @@
 
 
         <!-- 모달 창 -->
-        <div id="profileModal" class="modal" >
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <h2>프로필 사진 변경</h2>
-                <!-- 업로드 폼 추가 -->
-                <form id="profileUploadForm" action="/uploadProfile" method="post" enctype="multipart/form-data">
-                    <!-- 프로필 사진을 업로드하는 파일 입력 필드를 추가 -->
-                    <input type="file" name="profileImage" accept="image/*">
-                    <input type="submit" value="업로드">
-                </form>
-            </div>
-        </div>
+<!--        <div id="profileModal" class="modal" >-->
+<!--            <div class="modal-content">-->
+<!--                <span class="close">&times;</span>-->
+<!--                <h2>프로필 사진 변경</h2>-->
+<!--                &lt;!&ndash; 업로드 폼 추가 &ndash;&gt;-->
+<!--                <form id="profileUploadForm" action="/uploadProfile" method="post" enctype="multipart/form-data">-->
+<!--                    &lt;!&ndash; 프로필 사진을 업로드하는 파일 입력 필드를 추가 &ndash;&gt;-->
+<!--                    <input type="file" name="profileImage" accept="image/*">-->
+<!--                    <input type="submit" value="업로드">-->
+<!--                </form>-->
+<!--            </div>-->
+<!--        </div>-->
     </section>
     <!-- --------------------------------------------------------------------------------------------------------------------------- -->
 
