게시글수정완료

--- a/src/main/resources/templates/search-contents.html
+++ b/src/main/resources/templates/search-contents.html
@@ -151,8 +151,8 @@
                         <label>작성자 </label>
                         <span th:text="${dto.nickname}"></span><br/>
 
-                        <!-- <label for="email">글쓴이 이메일 </label>
-                        <input type="text" id="email" name="email" th:value="${#authentication.principal.username}" readonly /> -->
+                        <label for="email">글쓴이 이메일 </label>
+                        <input type="text" id="email" name="email" th:value="${#authentication.principal.username}" readonly />
                     </div>
 
                     <div class="form-group">
