--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -276,8 +276,8 @@
                         <label>작성자 </label>
                         <span th:text="${dto.nickname}"></span><br/>
 
-                        <!-- <label for="email">글쓴이 이메일 </label>
-                        <input type="text" id="email" name="email" th:value="${#authentication.principal.username}" readonly /> -->
+                        <label for="email">글쓴이 이메일 </label>
+                        <input type="text" id="email" name="email" th:value="${#authentication.principal.username}" readonly />
                     </div>
 
                     <div class="form-group">
@@ -303,6 +303,7 @@
 </div>
 
 <!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+
 <main>
     <section>
         <div class="profile">
@@ -375,6 +376,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             <!-- 게시물 수정 버튼 -->
+
                             <li><a th:href="@{'/update?number=' + ${board.number}}" class="dropdown-item">수정</a></li>
                             <!-- 게시물 삭제 버튼 -->
                             <li><a class="delete_btn dropdown-item" th:data-no="${board.number}">삭제</a></li>
